# cub-scout-award-slides

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  award_images.json  generate_awards.py  mise.toml  prefetch_images.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
scout_awards/: __init__.py  config.py  data.py  renderer.py
templates/: index.html
tests/: conftest.py  sample.csv  test_config.py  test_data.py  test_renderer.py  test_web.py
